# react-native-nitro-ark

./: .gitignore  AGENTS.md  justfile
.github/workflows/: build_test.yml  release.yml
bark-cpp/: Cargo.toml  build-android.sh  build-ios.sh  build.rs
bark-cpp/src/: backup.rs  cxx.rs  exit.rs  lib.rs  mailbox.rs  onchain.rs  state_changes.rs  subscriptions.rs  tests.rs  utils.rs
docs/: subscription-api-plan.md
patched/bitcoin-units/src/: fee_rate.rs
react-native-nitro-ark/: README.md  nitro.json  package.json
react-native-nitro-ark/android/src/main/cpp/: NitroArkJni.cpp  cpp-adapter.cpp
react-native-nitro-ark/android/src/main/java/com/margelo/nitro/nitroark/: NitroArkNative.kt
react-native-nitro-ark/cpp/: BarkNotificationSubscription.hpp  NitroArk.hpp  WalletStateChangeSubscription.hpp
react-native-nitro-ark/example/: jest.config.js  package.json
react-native-nitro-ark/example/android/app/: build.gradle
react-native-nitro-ark/example/android/app/src/main/java/nitroark/example/: NitroArkDemoModule.kt
react-native-nitro-ark/example/ios/NitroArkExample.xcodeproj/: project.pbxproj
react-native-nitro-ark/example/src/: App.tsx  constants.ts  types.ts
react-native-nitro-ark/example/src/tabs/: ExitTab.tsx  ReceiveTab.tsx  SendTab.tsx  WalletTab.tsx  index.ts
react-native-nitro-ark/src/: NitroArk.nitro.ts  index.tsx
scripts/: ark-dev.sh  captaind.toml  docker-compose.yml
