[package]
name = "bark-cpp"
version = "0.1.0"
edition = "2024"

[dependencies]
bark-wallet = { git = "https://gitlab.com/ark-bitcoin/bark.git", rev = "b9040f1dbf1a99634d20b18fc1c5890de0582942", features = [
  "native",
  "tls-webpki-roots",
  "onchain-bdk",
  "bitcoind-rpc",
  "sqlite",
], default-features = false }

bark-bitcoin-ext = { git = "https://gitlab.com/ark-bitcoin/bark.git", rev = "b9040f1dbf1a99634d20b18fc1c5890de0582942", default-features = false }
bdk_wallet = { version = "3.0.0" }
bdk_bitcoind_rpc = { version = "0.22.0" }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", default-features = false, features = [
  "rt-multi-thread",
  "macros",
  "fs",
  "time",
] }
tokio-util = { version = "0.7.14", default-features = false }
bip39 = { version = "2.2.0", default-features = false }
anyhow = "1.0.100"
futures = "0.3.31"
logger = { path = "../logger" }
serde = "1.0.228"
tonic = { version = "0.14.3", default-features = false, features = ["transport", "codegen"] }
serde_json = "1.0.145"
cxx = "1.0.186"
hex = "0.4.3"

[build-dependencies]
cxx-build = "1.0.186"

[lib]
crate-type = ["staticlib"]
name = "bark_cpp"
path = "src/lib.rs"

# Add these profile configurations
[profile.release]
opt-level = 's' # Optimize for size
lto = true # Enable Link Time Optimization
codegen-units = 1 # Reduce parallel code generation units
panic = 'abort' # Remove panic unwinding code
strip = true # Strip symbols from binary

[dev-dependencies]
tempfile = "3.23.0"
serde_json = "1.0"

[patch."https://gitlab.com/ark-bitcoin/bark.git"]
bark-wallet = { path = "../../bark/bark" }
bark-bitcoin-ext = { path = "../../bark/bitcoin-ext" }
